[tool.poetry]
name = "splitaudio"
version = "0.1.0"
description = ""
authors = ["Andrew Hendley <amhendley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
